Fixed issue: captcha cols and button icon alignment

--- a/assets/survey_themes/ls6_surveytheme/participant/captcha/captcha.scss
+++ b/assets/survey_themes/ls6_surveytheme/participant/captcha/captcha.scss
@@ -5,13 +5,20 @@
 }
 
 .captcha-item {
-    margin-top: 24px;
+    margin-top : 24px;
+
     .captcha-container {
-        display: flex;
+        display : flex;
     }
 }
-@media only screen and (max-width: 767px) {
-    .reload-button, .captcha-input {
-        padding-top: 8px;
+
+#reloadCaptcha {
+    max-height  : 36px;
+    margin-left : 10px;
+}
+
+@media only screen and (max-width : 991px) {
+    .captcha-input {
+        padding-top : 8px;
     }
 }
